1999-12-07  Mikhael Goikhman  <migo@homemail.com>

	* index.html: removed html tag 'MULTICOL' screwing the layout,
	added missing '</blockquote>', some rewording
	* cvs.html: removed "-b -B" option advise from "cvs diff"
	* vector-buttons/DecorDemo2.{fvwmrc,gif}:
	improved diagonal-arrow buttons, changed order of buttons
	* vector-buttons/testbed.fvwmrc:
	Added missing 'Read'; commented out 'Mouse' lines (these global
	binding changes are superfluous); added 'MWMBorder, HandleWidth 10'
	to demo style.

1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html:
	* index.html:
	set stable version to 2.2.4

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.10

1999-11-22  Dan Espen  <dane@mk.telcordia.com>

	*    index.html, vector-buttons  directory:   vector-buttons.html,
 	testbed.fvwmrc,             DecorDemo1.fvwmrc,     DecorDemo1.gif,
 	DecorDemo2.fvwmrc,        DecorDemo2.gif,       DecorDemo3.fvwmrc,
 	DecorDemo3.gif : New vector buttons page.

	* screenshots/screenshot.html: fixed reference to background (../).

1999-11-13  olicha  <olivier.chapuis@free.fr>

	* mod_m2f_communication.html: Updated the "Synchronous vs.
	Asynchronous Operation" section.

	* mod_f2m_communication.html: Replaced M_LOCKONSEND by M_NOTUSED

1999-09-26  Dominik Vogt  <dominik_vogt@gmx.de>

	* mod_initialization.html: more colorset instructions

1999-10-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html: added news for 2.2.3

	* download.html: increased stable version number to 2.2.3

1999-10-14  Dan Espen  <dane@mk.telcordia.com>

	* screenshots: Added some screenshots from Lee Willis.

1999-10-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.8

1999-09-19  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm-cats/index.html: 'Cats' doesn't blink anymore

	* download.html: increased version number to 2.3.8

Sun Sep 12 09:36:37 1999  DanEspen  <dje@blue>
