@@ -16,7 +16,7 @@ Current packages:
 Latest stable Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.4.tar.gz">2.2.4</a></li>
 
 <li>
-Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.10.tar.gz">2.3.10</a></li>
+Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.11.tar.gz">2.3.11</a></li>
 
 <li>
 Latest Alpha Versions: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/testing/">here</a></li>
@@ -69,9 +69,9 @@ List</a>.
 <p>*** If you use anything else but the latest stable release we will make
 no promises that anything works. ***
 <p><i>Older 2.x and 1.x versions:</i>
-<p>Don't use them. If you encounter we will most likely ask you to upgrade.
-There is a constant stream of bug fixes and we cannot spend our time fixing
-the same bugs again and again.
+<p>Don't use them. If you encounter a problem we will most likely ask you
+to upgrade.  There is a constant stream of bug fixes and we cannot spend
+our time fixing the same bugs again and again.
 <p>*** Problems in one of the below packages should be discussed on the
 fvwm-workers <a href="mailinglist.html">Mailing List</a>. ***
 <p><i>Latest Alpha and Beta versions:</i>
