@@ -1,3 +1,12 @@
+1999-12-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html: increased version number to 2.3.11
+
+1999-12-04  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html:
+	fixed typo
+
 1999-12-07  Mikhael Goikhman  <migo@homemail.com>
 
 	* index.html: removed html tag 'MULTICOL' screwing the layout,
